--- a/src/main/resources/com/suleyk/saveportal/main.fxml
+++ b/src/main/resources/com/suleyk/saveportal/main.fxml
@@ -71,8 +71,9 @@
                     <children>
 
                         <!-- Backup-related Controls -->
-                        <ListView fx:id="backupSavesListView" layoutX="5.0" layoutY="21.0" prefHeight="382.0"
-                                  prefWidth="588.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="5.0"
+                        <ListView fx:id="backupSavesListView" layoutX="5.0" layoutY="21.0" maxHeight="-Infinity"
+                                  maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="217.0"
+                                  prefWidth="484.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="5.0"
                                   AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0"/>
                         <Button fx:id="importActiveSaveButton" layoutX="5.0" layoutY="220.0" mnemonicParsing="false"
                                 onAction="#onImportActiveSaveButtonClick" text="Import active save"
@@ -108,34 +109,42 @@
                                 <Tooltip text="Toggle dark mode"/>
                             </tooltip>
                         </ToggleButton>
+                        <ImageView fitHeight="249.0" fitWidth="322.0" layoutX="124.0" layoutY="-16.0" opacity="0.15"
+                                   pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@SavePortalBackground.png"/>
+                            </image>
+                        </ImageView>
                     </children>
                 </AnchorPane>
             </items>
         </SplitPane>
         <Label fx:id="exportFeedbackLabel" layoutX="148.0" layoutY="5.0" prefHeight="17.0" prefWidth="305.0"
                textFill="#078700f1"/>
-        <Button fx:id="minimizeButton" layoutX="520.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-                minWidth="-Infinity" mnemonicParsing="false" onAction="#onMinimizeButtonClick" prefHeight="20.0"
-                prefWidth="20.0" textFill="TRANSPARENT" AnchorPane.rightAnchor="23.0" AnchorPane.topAnchor="2.0">
+        <Button fx:id="minimizeButton" layoutX="454.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity"
+                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onMinimizeButtonClick"
+                prefHeight="20.0" prefWidth="20.0" textFill="TRANSPARENT" AnchorPane.rightAnchor="28.0"
+                AnchorPane.topAnchor="2.0">
             <font>
                 <Font size="10.0"/>
             </font>
             <graphic>
-                <ImageView fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="27.0" fitWidth="27.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@minimize.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
-        <Button fx:id="closeButton" layoutX="535.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-                minWidth="-Infinity" mnemonicParsing="false" onAction="#onCloseButtonClick" prefHeight="20.0"
-                prefWidth="20.0" textFill="TRANSPARENT" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0">
+        <Button fx:id="closeButton" layoutX="477.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity"
+                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCloseButtonClick"
+                prefHeight="20.0" prefWidth="20.0" textFill="TRANSPARENT" AnchorPane.rightAnchor="5.0"
+                AnchorPane.topAnchor="2.0">
             <font>
                 <Font size="10.0"/>
             </font>
             <graphic>
-                <ImageView fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="27.0" fitWidth="27.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@close.png"/>
                     </image>
