--- a/src/main/resources/com/suleyk/saveportal/main.fxml
+++ b/src/main/resources/com/suleyk/saveportal/main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="sceneRoot" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="sceneRoot" minHeight="-Infinity" minWidth="-Infinity" prefHeight="499.0"
             prefWidth="502.0" stylesheets="@dark-mode.css" xmlns="http://javafx.com/javafx/17.0.2-ea"
             fx:controller="com.suleyk.saveportal.MainController">
     <children>
@@ -17,7 +17,7 @@
                 <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="0.0" prefHeight="63.0"
                             prefWidth="600.0" SplitPane.resizableWithParent="false">
                     <!-- Game-related Controls -->
-                    <ChoiceBox fx:id="gameChoiceBox" layoutX="5.0" layoutY="36.0" prefHeight="25.0" prefWidth="143.0"
+                    <ChoiceBox fx:id="gameChoiceBox" layoutX="5.0" layoutY="36.0" prefHeight="25.0" prefWidth="227.0"
                                AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="36.0"/>
                     <Button fx:id="addGameButton" layoutX="53.0" layoutY="5.0" mnemonicParsing="false"
                             onAction="#onAddGameButtonClick" text="Add" AnchorPane.leftAnchor="53.0"
@@ -69,6 +69,8 @@
                     <Label layoutX="271.0" layoutY="9.0" prefHeight="17.0" prefWidth="44.0" text="Profile:"/>
                     <Label layoutX="11.0" layoutY="9.0" text="Game:" AnchorPane.leftAnchor="11.0"
                            AnchorPane.topAnchor="9.0"/>
+                    <Button fx:id="openGameFolderButton" layoutX="152.0" layoutY="5.0" mnemonicParsing="false"
+                            onAction="#onOpenGameFolderButtonClick" text="Open folder"/>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="411.0" prefWidth="598.0">
                     <children>
@@ -112,7 +114,7 @@
                                 <Tooltip text="Toggle dark mode"/>
                             </tooltip>
                         </ToggleButton>
-                        <ImageView fitHeight="223.0" fitWidth="238.0" layoutX="136.0" layoutY="-3.0" opacity="0.05"
+                        <ImageView fitHeight="223.0" fitWidth="238.0" layoutX="136.0" layoutY="72.0" opacity="0.05"
                                    pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@SavePortalBackground.png"/>
